I am lazy:/ // I didn't added a new logic for transition to new activity, but I was trying :( ..... короче: Я - леньтяй // не добавил логику для перехода на новую активность (с главного экрана на второстепенный), но Я старался!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Browser17_03_2022haha4unMaker">
         <activity
+            android:name=".Main"
+            android:exported="false" />
+        <activity
             android:name=".PinCodeEnter"
             android:exported="true">
             <intent-filter>
@@ -22,8 +25,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
